initiel oplossing werkt